src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

.message{
  margin:10px;
  width:fit-content;
  padding: 5px;
  position: relative;
 
  
  
}
.message_user{
  margin-left:auto;
  color: white;
  text-align: left !important;
  bottom: 130px;
}

.message_userCard{
  background-color:#2563EB !important;
  color: white !important;
}

.message_guestCard{
  background-color:#E5E7EB !important;
}
.app_form{
  position:fixed;
  bottom: 0;
  padding: 0px;
  width: 100%;
  /* margin: 15px; */
  background:#F3F4F6;
  z-index: 1;
}


.app_formControl{
  display: flex !important;
  flex-direction: row !important;
}

.app_input{
  flex:1;
}

.app_iconButton{
  flex: 0;
}

.welcome_img{

  height: 250px;
}

